--- a/src/app/genera-variados/genera-variados.component.html
+++ b/src/app/genera-variados/genera-variados.component.html
@@ -406,6 +406,73 @@
       </mat-card>
     </div>
 
+
+    <div class="caja c10">
+      <mat-card appearance="outlined">
+        <mat-card-header>Validar ISIN (International Securities Identification Numbering)</mat-card-header>
+        <mat-card-content>
+          <div class="divBox">
+            <mat-form-field style="width: 250px !important;">
+              <mat-label>ISIN</mat-label>
+              <input matInput id="isinValidar" type="text" placeholder="ES055XBM8IE4" [(ngModel)]="isinValidar"
+                style="text-transform:uppercase" maxlength="12">
+            </mat-form-field>
+            <button type="button" mat-fab aria-label="Validar un ISIN" (click)="onClickValidaIsin()"
+              matTooltip="Pulsar para validar" matTooltipPosition="below" style="margin-left: 5px;">
+              <mat-icon>search_check</mat-icon>
+            </button>
+            <div style="margin-left: 5px;">
+              <div *ngIf="isinValidarOk == 'OK'">
+                <button type="button" class="btn-success"
+                  matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
+                  <mat-icon>done_all</mat-icon>
+                </button>
+              </div>
+              <div *ngIf="isinValidarOk == 'ERROR'">
+                <button type="button" class="btn-danger"
+                  matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
+                  <mat-icon>close</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="caja c11">
+      <mat-card appearance="outlined">
+        <mat-card-header>Validar NSS (Número Seguridad Social)</mat-card-header>
+        <mat-card-content>
+          <div class="divBox">
+            <mat-form-field style="width: 250px !important;">
+              <mat-label>NSS</mat-label>
+              <input matInput id="nssValidar" type="text" placeholder="047063802539" [(ngModel)]="nssValidar"
+                style="text-transform:uppercase" maxlength="12">
+            </mat-form-field>
+            <button type="button" mat-fab aria-label="Validar un NSS" (click)="onClickValidaNss()"
+              matTooltip="Pulsar para validar" matTooltipPosition="below" style="margin-left: 5px;">
+              <mat-icon>search_check</mat-icon>
+            </button>
+            <div style="margin-left: 5px;">
+              <div *ngIf="nssValidarOk == 'OK'">
+                <button type="button" class="btn-success"
+                  matTooltip="Si" matTooltipPosition="below" (click)="onSelectDato('Si')">
+                  <mat-icon>done_all</mat-icon>
+                </button>
+              </div>
+              <div *ngIf="nssValidarOk == 'ERROR'">
+                <button type="button" class="btn-danger"
+                  matTooltip="No" matTooltipPosition="below" (click)="onSelectDato('No')">
+                  <mat-icon>close</mat-icon>
+                </button>
+              </div>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
   </div>
 
 </div>
