--- a/src/app/genera-perfiles/genera-perfiles.component.html
+++ b/src/app/genera-perfiles/genera-perfiles.component.html
@@ -311,7 +311,7 @@
         <span class="cnae">{{empresaGenerada.cnae}}</span>
       </button>
     </div>
-    <div class="caja" *ngIf="empresaGenerada">
+    <div class="caja cpDir" *ngIf="empresaGenerada">
       <label>Actividad: </label>
       <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.actividad))" style="margin-left: 10px; "
       matTooltip="Pulsar para copiar" matTooltipPosition="below">
@@ -321,16 +321,16 @@
 
     <div class="caja" *ngIf="empresaGenerada">
       <label>Email: </label>
-      <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.email)" style="margin-left: 10px; "
+      <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.email))" style="margin-left: 10px; "
       matTooltip="Pulsar para copiar" matTooltipPosition="below">
-        <span class="email">{{empresaGenerada.email}}</span>
+        <span class="email">{{empresaGenerada.email | caseTransformer: tipoLetra}}</span>
       </button>
     </div>
     <div class="caja" *ngIf="empresaGenerada">
       <label>Pág. Web: </label>
-      <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.paginaWeb)" style="margin-left: 10px; "
+      <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.paginaWeb))" style="margin-left: 10px; "
       matTooltip="Pulsar para copiar" matTooltipPosition="below">
-        <span class="web">{{empresaGenerada.paginaWeb}}</span>
+        <span class="web">{{empresaGenerada.paginaWeb | caseTransformer: tipoLetra}}</span>
       </button>
     </div>
     <div class="caja" *ngIf="empresaGenerada">
@@ -424,6 +424,54 @@
     <div class="table-responsive">
       <table mat-table #sortPersonas="matSort" [dataSource]="listaPersonasGeneradas" matSort  (matSortChange)="announceSortChange($event)">
 
+        <!-- Opcion de parametrizar columna y mostrar por tipo en vez de hacerlo por cada columna
+          https://muhimasri.com/blogs/create-an-editable-dynamic-table-using-angular-material/
+         -->
+        <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchemaPersonas">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}</th>
+          <td mat-cell *matCellDef="let personaGenerada">
+            <!-- Seleccionamos por el type como mostrarlo-->
+            <div [ngSwitch]="col.type" >
+              <!--button: boton normal para mostrar un dato (viene parametrizado por propiedades: si aplica una clase de formato distinta,
+                si aplica cambio mayus/minus e incluso si no lleva solo un valor a mostrar sino dos valores)
+              -->
+              <div *ngSwitchCase="'button'">
+                <button mat-flat-button [ngClass]="col.clase" type="button" (click)="onSelectDato(transformaTexto(personaGenerada[col.columna], col.caseSensitive))"
+                matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{personaGenerada[col.columna] | caseTransformer: tipoLetra }}</span>
+                  <span *ngIf="!col.caseSensitive">{{personaGenerada[col.columna]}}</span>
+                </button>
+                <button *ngIf="personaGenerada[col.columna2] && personaGenerada[col.columna2] != ''"
+                  mat-flat-button [ngClass]="col.clase" type="button" (click)="onSelectDato(transformaTexto(personaGenerada[col.columna2], col.caseSensitive))"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{personaGenerada[col.columna2] | caseTransformer: tipoLetra }}</span>
+                  <span *ngIf="!col.caseSensitive">{{personaGenerada[col.columna2]}}</span>
+                </button>
+              </div>
+              <!--subobjeto: la propiedad directo hijo de es un subobjeto, se muestra la propiedad del subobjeto indicado
+                Lo utilizamos para la propiedad "direccion"
+              -->
+              <div *ngSwitchCase="'subobjeto'">
+                <button mat-flat-button [ngClass]="col.clase"  type="button" (click)="onSelectDato(transformaTexto(personaGenerada[col.columna]?.[col.subpropiedad], col.caseSensitive))"
+                matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{personaGenerada[col.columna]?.[col.subpropiedad] | caseTransformer: tipoLetra}}</span>
+                  <span *ngIf="!col.caseSensitive">{{personaGenerada[col.columna]?.[col.subpropiedad]}}</span>
+                </button>
+                <button *ngIf="personaGenerada[col.columna2]"
+                  mat-flat-button [ngClass]="col.clase"  type="button" (click)="onSelectDato(transformaTexto(personaGenerada[col.columna2]?.[col.subpropiedad2], col.caseSensitive))"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{personaGenerada[col.columna2]?.[col.subpropiedad2] | caseTransformer: tipoLetra}}</span>
+                  <span *ngIf="!col.caseSensitive">{{personaGenerada[col.columna2]?.[col.subpropiedad2]}}</span>
+                </button>
+              </div>
+              <span *ngSwitchDefault>
+                {{ personaGenerada[col.columna] }}
+              </span>
+            </div>
+          </td>
+        </ng-container>
+
+        <!-- **DEPRECATED: opcion de rellenar por cada columna
         <ng-container matColumnDef="nif">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>NIF</th>
           <td mat-cell *matCellDef="let personaGenerada">
@@ -727,7 +775,7 @@
             </button>
           </td>
         </ng-container>
-
+        -->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsPersonas"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsPersonas;"></tr>
@@ -760,184 +808,52 @@
     <div class="table-responsive">
       <table mat-table #sortEmpresas="matSort" [dataSource]="listaEmpresasGeneradas" matSort  (matSortChange)="announceSortChange($event)">
 
-        <ng-container matColumnDef="cif">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>CIF</th>
+        <!-- Opcion de parametrizar columna y mostrar por tipo en vez de hacerlo por cada columna
+          https://muhimasri.com/blogs/create-an-editable-dynamic-table-using-angular-material/
+         -->
+        <ng-container [matColumnDef]="col.key" *ngFor="let col of columnsSchemaEmpresas">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>{{col.label}}</th>
           <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.cif)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="cif">{{empresaGenerada.cif}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="razon">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Razón social</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.nombre))" class="botonFlatGrande"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="nombre">{{empresaGenerada.nombre | caseTransformer: tipoLetra}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="fechacons">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>F. constitución</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.fechaCreacion)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="fecha">{{empresaGenerada.fechaCreacion}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="cnae">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>CNAE</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.cnae)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="cnae">{{empresaGenerada.cnae}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="actividad">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Actividad</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.actividad))" class="botonFlatGrande"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="actividad">{{empresaGenerada.actividad | caseTransformer: tipoLetra}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.email)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="email">{{empresaGenerada.email}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="paginaWeb">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Pág. Web</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.paginaWeb)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="web">{{empresaGenerada.paginaWeb}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="telefono">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Teléfono</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.telefono)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="telefono">{{empresaGenerada.telefono}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="fax">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Fax</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.fax)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="telefono">{{empresaGenerada.fax}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="ccaa">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>CCAA</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <div>
-              <button mat-flat-button class="botonFlatReducido"  type="button" (click)="onSelectDato(empresaGenerada.direccion.ineCcaa)"
-              matTooltip="Pulsar para copiar" matTooltipPosition="below">
-                <span class="ccaaIne">{{empresaGenerada.direccion.ineCcaa}}</span>
-              </button>
-              <button mat-flat-button class="botonFlatReducido"  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.direccion.ccaa))"
-              matTooltip="Pulsar para copiar" matTooltipPosition="below">
-                <span class="ccaa">{{empresaGenerada.direccion.ccaa | caseTransformer: tipoLetra}}</span>
-              </button>
+            <!-- Seleccionamos por el type como mostrarlo-->
+            <div [ngSwitch]="col.type" >
+              <!--button: boton normal para mostrar un dato (viene parametrizado por propiedades: si aplica una clase de formato distinta,
+                si aplica cambio mayus/minus e incluso si no lleva solo un valor a mostrar sino dos valores)
+              -->
+              <div *ngSwitchCase="'button'">
+                <button mat-flat-button [ngClass]="col.clase" type="button" (click)="onSelectDato(transformaTexto(empresaGenerada[col.columna], col.caseSensitive))"
+                matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{empresaGenerada[col.columna] | caseTransformer: tipoLetra }}</span>
+                  <span *ngIf="!col.caseSensitive">{{empresaGenerada[col.columna]}}</span>
+                </button>
+                <button *ngIf="empresaGenerada[col.columna2] && empresaGenerada[col.columna2] != ''"
+                  mat-flat-button [ngClass]="col.clase" type="button" (click)="onSelectDato(transformaTexto(empresaGenerada[col.columna2], col.caseSensitive))"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{empresaGenerada[col.columna2] | caseTransformer: tipoLetra }}</span>
+                  <span *ngIf="!col.caseSensitive">{{empresaGenerada[col.columna2]}}</span>
+                </button>
+              </div>
+              <!--subobjeto: la propiedad directo hijo de es un subobjeto, se muestra la propiedad del subobjeto indicado
+                Lo utilizamos para la propiedad "direccion"
+              -->
+              <div *ngSwitchCase="'subobjeto'">
+                <button mat-flat-button [ngClass]="col.clase"  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada[col.columna]?.[col.subpropiedad], col.caseSensitive))"
+                matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{empresaGenerada[col.columna]?.[col.subpropiedad] | caseTransformer: tipoLetra}}</span>
+                  <span *ngIf="!col.caseSensitive">{{empresaGenerada[col.columna]?.[col.subpropiedad]}}</span>
+                </button>
+                <button *ngIf="empresaGenerada[col.columna2]"
+                  mat-flat-button [ngClass]="col.clase"  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada[col.columna2]?.[col.subpropiedad2], col.caseSensitive))"
+                  matTooltip="Pulsar para copiar" matTooltipPosition="below">
+                  <span *ngIf="col.caseSensitive">{{empresaGenerada[col.columna2]?.[col.subpropiedad2] | caseTransformer: tipoLetra}}</span>
+                  <span *ngIf="!col.caseSensitive">{{empresaGenerada[col.columna2]?.[col.subpropiedad2]}}</span>
+                </button>
+              </div>
+              <span *ngSwitchDefault>
+                {{ empresaGenerada[col.columna] }}
+              </span>
             </div>
           </td>
         </ng-container>
-
-        <ng-container matColumnDef="provincia">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Provincia</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <div>
-              <button mat-flat-button class="botonFlatReducido"  type="button" (click)="onSelectDato(empresaGenerada.direccion.ineProvincia)"
-              matTooltip="Pulsar para copiar" matTooltipPosition="below">
-                <span class="provinciaIne">{{empresaGenerada.direccion.ineProvincia}}</span>
-              </button>
-              <button mat-flat-button class="botonFlatReducido"  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.direccion.provincia))"
-              matTooltip="Pulsar para copiar" matTooltipPosition="below">
-                <span class="provincia">{{empresaGenerada.direccion.provincia | caseTransformer: tipoLetra}}</span>
-              </button>
-            </div>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="municipio">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Municipio</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <div>
-              <button mat-flat-button class="botonFlatReducido"  type="button" (click)="onSelectDato(empresaGenerada.direccion.ineMunicipio)"
-              matTooltip="Pulsar para copiar" matTooltipPosition="below">
-                <span class="municipioIne">{{empresaGenerada.direccion.ineMunicipio}}</span>
-              </button>
-              <button mat-flat-button class="botonFlatReducido"  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.direccion.municipio))"
-              matTooltip="Pulsar para copiar" matTooltipPosition="below">
-                <span class="municipio">{{empresaGenerada.direccion.municipio | caseTransformer: tipoLetra}}</span>
-              </button>
-            </div>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="codpostal">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Cod. Postal</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(empresaGenerada.direccion.codPostal)"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="codigoPostal">{{empresaGenerada.direccion.codPostal}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="direcion">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Dirección</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.direccion.direccionAMedio))" class="botonFlatGrande"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="direccion">{{empresaGenerada.direccion.direccionAMedio | caseTransformer: tipoLetra}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="direccioncompleta">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Dirección completa</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.direccion.direccionCompleta))" class="botonFlatGrande"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="direccion">{{empresaGenerada.direccion.direccionCompleta | caseTransformer: tipoLetra}}</span>
-            </button>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="referenciaCatastral">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>Ref. catastral</th>
-          <td mat-cell *matCellDef="let empresaGenerada">
-            <button mat-flat-button  type="button" (click)="onSelectDato(transformaTexto(empresaGenerada.direccion.direccireferenciaCatastralonCompleta))"
-            matTooltip="Pulsar para copiar" matTooltipPosition="below">
-              <span class="direccion">{{empresaGenerada.direccion.referenciaCatastral | caseTransformer: tipoLetra}}</span>
-            </button>
-          </td>
-        </ng-container>
-
 
         <tr mat-header-row *matHeaderRowDef="displayedColumnsEmpresas"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsEmpresas;"></tr>
